--- a/particle-size-analyzer-backend/requirements.txt
+++ b/particle-size-analyzer-backend/requirements.txt
@@ -1,16 +1,43 @@
 annotated-types==0.5.0
 anyio==3.7.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cycler==0.11.0
 exceptiongroup==1.1.3
 fastapi==0.103.2
+fonttools==4.38.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==6.7.0
+kiwisolver==1.4.5
+matplotlib==3.5.3
+numpy==1.21.6
+opencv-python==4.8.1.78
+packaging==23.2
+pandas==1.3.5
+Pillow==9.5.0
+psutil==5.9.6
+py-cpuinfo==9.0.0
 pydantic==2.5.1
 pydantic_core==2.14.3
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+scipy==1.7.3
+seaborn==0.12.2
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+torch==1.13.1
+torchvision==0.14.1
+tqdm==4.66.1
 typing_extensions==4.7.1
+ultralytics==8.0.145
+urllib3==2.0.7
 uvicorn==0.22.0
 zipp==3.15.0
